components/breadcrumb/index.css
/*!
 * Copyright 2024 Adobe. All rights reserved.
 *
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at <http://www.apache.org/licenses/LICENSE-2.0>
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

.spectrum-Breadcrumbs {
	--spectrum-breadcrumbs-block-size: var(--spectrum-component-size-100);

	/* Text - medium / default */
	--spectrum-breadcrumbs-line-height: var(--spectrum-line-height-100);
	--spectrum-breadcrumbs-font-size: var(--spectrum-font-size-100);
	--spectrum-breadcrumbs-font-family: var(--spectrum-sans-font-family-stack);
	--spectrum-breadcrumbs-font-weight: var(--spectrum-regular-font-weight);

	--spectrum-breadcrumbs-font-size-current: var(--spectrum-font-size-100);
	--spectrum-breadcrumbs-font-family-current: var(--spectrum-sans-font-family-stack);
	--spectrum-breadcrumbs-font-weight-current: var(--spectrum-bold-font-weight);

	/* Hover, active, focus underline */
	--spectrum-breadcrumbs-text-decoration-thickness: var(--spectrum-text-underline-thickness);
	--spectrum-breadcrumbs-text-decoration-gap: var(--spectrum-text-underline-gap);

	/* Space between separator chevron and items */
	--spectrum-breadcrumbs-separator-spacing-inline: var(--spectrum-breadcrumbs-text-to-separator-medium);

	/* Space between edge of component and start/end items */
	--spectrum-breadcrumbs-inline-start-to-text: var(--spectrum-breadcrumbs-start-edge-to-text-medium);
	--spectrum-breadcrumbs-inline-end-to-text: var(--spectrum-breadcrumbs-end-edge-to-text);

	/* Vertical spacing for text and separator icon */
	--spectrum-breadcrumbs-text-spacing-block-start: var(--spectrum-component-top-to-text-100);
	--spectrum-breadcrumbs-text-spacing-block-end: var(--spectrum-component-bottom-to-text-100);
	--spectrum-breadcrumbs-icon-spacing-block: var(--spectrum-breadcrumbs-top-to-separator-medium);
	--spectrum-breadcrumbs-title-spacing-block-start: var(--spectrum-breadcrumbs-text-spacing-block-start);
	--spectrum-breadcrumbs-title-spacing-block-end: var(--spectrum-breadcrumbs-text-spacing-block-end);

	/* Horizontal outer spacing of list */
	--spectrum-breadcrumbs-inline-start: var(--spectrum-breadcrumbs-start-edge-to-text-medium);
	--spectrum-breadcrumbs-inline-end: var(--spectrum-breadcrumbs-end-edge-to-text);
	--spectrum-breadcrumbs-inline-start-to-truncated-menu: var(--spectrum-breadcrumbs-start-edge-to-truncated-menu);

	/* Action button (truncated menu) spacing  */
	--spectrum-breadcrumbs-action-button-spacing-inline: var(--spectrum-breadcrumbs-truncated-menu-to-separator-icon);
	--spectrum-breadcrumbs-action-button-spacing-block: var(--spectrum-breadcrumbs-top-to-truncated-menu);

	/* Focus indicator */
	--spectrum-breadcrumbs-focus-indicator-thickness: var(--spectrum-focus-indicator-thickness);
	--spectrum-breadcrumbs-focus-indicator-gap: var(--spectrum-focus-indicator-gap);
	--spectrum-breadcrumbs-item-link-border-radius: var(--spectrum-corner-radius-100);

	/* Colors */
	--spectrum-breadcrumbs-text-color: var(--spectrum-neutral-subdued-content-color-default);
	--spectrum-breadcrumbs-text-color-current: var(--spectrum-neutral-content-color-default);
	--spectrum-breadcrumbs-text-color-disabled: var(--spectrum-disabled-content-color);
	--spectrum-breadcrumbs-separator-color: var(--spectrum-neutral-content-color-default);
	--spectrum-breadcrumbs-action-button-color: var(--spectrum-neutral-subdued-content-color-default);
	--spectrum-breadcrumbs-action-button-color-disabled: var(--spectrum-disabled-content-color);
	--spectrum-breadcrumbs-focus-indicator-color: var(--spectrum-focus-indicator-color);
}

/* Variant: large */
.spectrum-Breadcrumbs--large {
	--spectrum-breadcrumbs-block-size: var(--spectrum-component-size-200);
	--spectrum-breadcrumbs-font-size: var(--spectrum-font-size-200);
	--spectrum-breadcrumbs-font-size-current: var(--spectrum-font-size-200);

	--spectrum-breadcrumbs-separator-spacing-inline: var(--spectrum-breadcrumbs-text-to-separator-large);
	--spectrum-breadcrumbs-text-spacing-block-start: var(--spectrum-component-top-to-text-200);
	--spectrum-breadcrumbs-text-spacing-block-end: var(--spectrum-component-bottom-to-text-200);
	--spectrum-breadcrumbs-icon-spacing-block: var(--spectrum-breadcrumbs-top-to-separator-large);
	--spectrum-breadcrumbs-inline-start: var(--spectrum-breadcrumbs-start-edge-to-text-large);
}

/* Variant: multiline */
.spectrum-Breadcrumbs--multiline {
	--spectrum-breadcrumbs-block-size: var(--spectrum-breadcrumbs-height-multiline);
	--spectrum-breadcrumbs-font-size: var(--spectrum-font-size-75);
	--spectrum-breadcrumbs-font-size-current: var(--spectrum-heading-size-l);
	--spectrum-breadcrumbs-font-weight-current: var(--spectrum-extra-bold-font-weight);

	--spectrum-breadcrumbs-separator-spacing-inline: var(--spectrum-breadcrumbs-text-to-separator-multiline);
	--spectrum-breadcrumbs-text-spacing-block-start: var(--spectrum-breadcrumbs-top-to-text-multiline);
	--spectrum-breadcrumbs-text-spacing-block-end: var(--spectrum-breadcrumbs-top-text-to-bottom-text);
	--spectrum-breadcrumbs-icon-spacing-block: var(--spectrum-breadcrumbs-top-to-separator-multiline) var(--spectrum-breadcrumbs-separator-to-bottom-text-multiline);
	--spectrum-breadcrumbs-title-spacing-block-start: 0;
	--spectrum-breadcrumbs-title-spacing-block-end: var(--spectrum-breadcrumbs-bottom-to-text-multiline);
	--spectrum-breadcrumbs-inline-start: var(--spectrum-breadcrumbs-start-edge-to-text-multiline);
	--spectrum-breadcrumbs-action-button-spacing-block: var(--spectrum-breadcrumbs-top-to-truncated-menu) var(--spectrum-breadcrumbs-truncated-menu-to-bottom-text);
}
/* ... */

